@@ -49,8 +49,9 @@ gradle.buildFinished({ result ->
 allprojects {
     // Add common JVM options such as max memory and leak detection.
     tasks.withType(JavaForkOptions) {
-        maxHeapSize = '512m'
-        if (rootProject.ext.testJavaVersion >= 9) {
+        maxHeapSize = '768m'
+
+        if (project.ext.testJavaVersion >= 9) {
             jvmArgs '--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED'
         }
 
@@ -68,18 +69,26 @@ allprojects {
         // Drop heap dump and exit on OOME.
         jvmArgs '-XX:+ExitOnOutOfMemoryError'
         jvmArgs '-XX:+HeapDumpOnOutOfMemoryError'
-        jvmArgs "-XX:HeapDumpPath=${rootProject.buildDir}"
+        jvmArgs "-XX:HeapDumpPath=./build"
 
-        // `-Pjava.security.manager` was added in Java 17 and the default value was changed to `disallow` in Java 18.
+        // `-Djava.security.manager` was added in Java 17 and the default value was changed to
+        // `disallow` in Java 18.
         // - https://openjdk.org/jeps/411
         // - https://bugs.openjdk.org/browse/JDK-8270380
-        if (rootProject.ext.testJavaVersion >= 17) {
+        if (project.ext.testJavaVersion >= 17) {
             systemProperty "java.security.manager", "allow"
+        }
+
+        // required by blockhound for jvm 13+. See https://github.com/reactor/BlockHound/issues/33.
+        if (rootProject.hasProperty('blockhound') && project.ext.testJavaVersion >= 13) {
+            jvmArgs "-XX:+AllowRedefinitionToAddDeleteMethods"
         }
 
         // Use verbose exception/response reporting for easier debugging.
         systemProperty 'com.linecorp.armeria.verboseExceptions', 'true'
         systemProperty 'com.linecorp.armeria.verboseResponses', 'true'
+
+        systemProperty 'com.linecorp.armeria.blockhound.reportFile', "./build/blockhound.log"
 
         // Pass special system property to tell our tests that we are measuring coverage.
         if (project.hasFlags('coverage')) {
@@ -99,6 +108,13 @@ allprojects {
                     hasLeak.set(true)
                 }
             })
+        }
+
+        retry {
+            if (rootProject.findProperty('retry') == 'true') {
+                maxRetries = 3
+                failOnPassedAfterRetry = true
+            }
         }
     }
 }
@@ -157,12 +173,15 @@ configure(projectsWithFlags('java')) {
         // Logging
         implementation libs.slf4j.api
         testImplementation libs.slf4j.jul.to.slf4j
-        testImplementation libs.logback
+        testImplementation libs.logback12
         testRuntimeOnly libs.slf4j.jcl.over.slf4j
         testRuntimeOnly libs.slf4j.log4j.over.slf4j
 
         // Reflections
         implementation libs.reflections
+
+        // Blockhound
+        optionalImplementation libs.blockhound
 
         // Test-time dependencies
         testImplementation libs.guava.testlib
@@ -179,9 +198,14 @@ configure(projectsWithFlags('java')) {
         testRuntimeOnly libs.checkerframework // Required by guava-testlib
         testImplementation libs.assertj
         testImplementation libs.mockito
-        testImplementation libs.apache.httpclient
+        testImplementation libs.apache.httpclient5
         testImplementation libs.hamcrest
         testImplementation libs.hamcrest.library
+        testRuntimeOnly libs.kotlin.coroutines.debug
+
+        if (rootProject.hasProperty('blockhound')) {
+            testRuntimeOnly libs.blockhound.junit.platform
+        }
     }
 
     // Configure the default DuplicatesStrategy for such as:
